@@ -1,3 +1,8 @@
+2004-12-01  Stan Shebs  <shebs@apple.com>
+
+	* config/darwin.c (machopic_select_rtx_section): Don't put relocatable
+	expressions in the .literal8 section.
+
 2004-11-21  Stan Shebs  <shebs@apple.com>
 
 	* config/rs6000/rs6000.c: (rs6000_darwin64_function_arg): Add
